feat: add validation for event poster and update policies
add `poster_invalid?` calculation to validate if the `poster` is
provided. update authorization policies to include checks for
poster validity when publishing events. this ensures that events
cannot be published without a valid poster, improving data integrity.

--- a/lib/gits_web/components/layouts/host.html.heex
+++ b/lib/gits_web/components/layouts/host.html.heex
@@ -1,7 +1,7 @@
 <.flash_group flash={@flash} />
 
-<div class="grid gap-4 lg:flex">
-  <aside class="absolute inset-0 z-10 hidden w-full max-w-64 shrink-0 space-y-8 bg-white lg:static lg:z-0 lg:block">
+<div class="grid gap-4 lg:grid-cols-[theme(space.64)_1fr] h-dvh w-full overflow-hidden">
+  <aside class="absolute inset-0 z-10 hidden w-full lg:max-w-64 shrink-0 space-y-8 bg-white lg:static lg:z-0 lg:block">
     <div class="flex items-center px-4 py-2">
       <div class="grow lg:py-1">
         <div class="">
@@ -71,7 +71,7 @@
       </div>
     </div>
   </aside>
-  <div class="h-dvh w-full">
+  <div class="w-full overflow-auto">
     {@inner_content}
   </div>
 </div>
