--- a/lib/gits_web/live/host_live/events/show.html.heex
+++ b/lib/gits_web/live/host_live/events/show.html.heex
@@ -1,4 +1,4 @@
-<div class="space-y-4 h-screen overflow-auto">
+<div class="grid h-full grid-rows-[auto_auto_1fr] items-start gap-2 overflow-auto lg:gap-6">
   <.host_header current_user={@current_user} handle={@handle} host_name={@host_name}>
     <.host_breadcrumb_button text="Events" href={~p"/hosts/#{@handle}/events"} />
     <span class="text-xs font-semibold text-zinc-400">/</span>
@@ -57,8 +57,8 @@
     </div>
   </div>
 
-  <div class="grid items-start gap-4 pb-8 lg:grid-cols-[theme(space.64)_1fr] lg:gap-4">
-    <div class="flex gap-2 overflow-x-auto whitespace-nowrap px-2 pb-2 lg:grid lg:rounded-xl lg:bg-zinc-50/70 lg:py-2 lg:sticky lg:top-4">
+  <div class="grid items-start gap-4 pb-8 lg:grid-cols-[theme(space.64)_1fr]">
+    <div class="lg:top-4 flex gap-2 overflow-x-auto whitespace-nowrap px-2 pb-2 lg:sticky lg:grid lg:rounded-xl lg:bg-zinc-50/70 lg:py-2">
       <%= if not is_nil(@event) do %>
         <.link
           patch={~p"/hosts/#{@handle}/events/#{@event.public_id}/dashboard"}
@@ -86,7 +86,7 @@
             {label}
           </span>
 
-          <.icon :if={flag == :warn} class="text-amber-500 ri--alert-fill shrink-0" />
+          <.icon :if={flag == :warn} class="shrink-0 text-amber-500 ri--alert-fill" />
           <span :if={is_integer(flag)}>{flag}</span>
         </.button>
       <% else %>
@@ -100,47 +100,45 @@
       <% end %>
     </div>
 
-    <div class="w-full px-2">
-      <div class="max-w-screen-lg">
-        <.live_component
-          :if={@action == :dashboard}
-          id={@event.id}
-          module={__MODULE__.Dashboard}
-          current_user={@current_user}
-          event={@event}
-        />
+    <div class="max-w-screen-lg px-2">
+      <.live_component
+        :if={@action == :dashboard}
+        id={@event.id}
+        module={__MODULE__.Dashboard}
+        current_user={@current_user}
+        event={@event}
+      />
 
-        <.live_component
-          :if={@action == :details}
-          id={if(not is_nil(@event), do: @event.id, else: "create-new")}
-          module={__MODULE__.Details}
-          current_user={@current_user}
-          host_id={@host_id}
-          host_state={@host_state}
-          handle={@handle}
-          event={@event}
-        />
+      <.live_component
+        :if={@action == :details}
+        id={if(not is_nil(@event), do: @event.id, else: "create-new")}
+        module={__MODULE__.Details}
+        current_user={@current_user}
+        host_id={@host_id}
+        host_state={@host_state}
+        handle={@handle}
+        event={@event}
+      />
 
-        <.live_component
-          :if={@action == :tickets}
-          id="tickets"
-          module={__MODULE__.Tickets}
-          current_user={@current_user}
-          host_id={@host_id}
-          host_state={@host_state}
-          handle={@handle}
-          event={@event}
-        />
+      <.live_component
+        :if={@action == :tickets}
+        id="tickets"
+        module={__MODULE__.Tickets}
+        current_user={@current_user}
+        host_id={@host_id}
+        host_state={@host_state}
+        handle={@handle}
+        event={@event}
+      />
 
-        <.live_component
-          :if={@action == :settings}
-          id={@event.id}
-          module={__MODULE__.Settings}
-          current_user={@current_user}
-          handle={@handle}
-          event={@event}
-        />
-      </div>
+      <.live_component
+        :if={@action == :settings}
+        id={@event.id}
+        module={__MODULE__.Settings}
+        current_user={@current_user}
+        handle={@handle}
+        event={@event}
+      />
     </div>
   </div>
 </div>
