--- a/lib/gits_web/components/layouts/root.html.heex
+++ b/lib/gits_web/components/layouts/root.html.heex
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="h-dvh overflow-hidden bg-white dark:bg-black">
+<html lang="en" class="bg-white dark:bg-black h-dvh overflow-hidden">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -20,7 +20,7 @@
     </script>
   </head>
 
-  <body class="font-poppins leading-tight antialiased h-dvh overflow-hidden">
+  <body class="font-poppins leading-tight antialiased">
     {@inner_content}
   </body>
 </html>
