--- a/lib/gits_web/live/host_live/events/show/dashboard.html.heex
+++ b/lib/gits_web/live/host_live/events/show/dashboard.html.heex
@@ -15,7 +15,7 @@
     </div>
   </div>
 
-  <div class="border-border bg-background rounded-lg border p-4">
+  <div :if={@event_issues_pending?} class="border-border bg-background rounded-lg border p-4">
     <div class="flex gap-2">
       <div class="flex grow gap-3">
         <.icon class="shrink-0 text-lg text-amber-500 ri--alert-line" />
