--- a/lib/gits_web/live/host_live/events/show/tickets.html.heex
+++ b/lib/gits_web/live/host_live/events/show/tickets.html.heex
@@ -18,6 +18,25 @@
     </.button>
   </div>
 
+  <div class="col-span-full rounded-lg border border-amber-500/50 p-4">
+    <div class="flex">
+      <div class="shrink-0">
+        <.icon class="text-lg text-amber-400 ri--alert-fill" />
+      </div>
+      <div class="ml-3">
+        <h3 class="text-sm font-medium text-amber-700">
+          There are 2 issues with your event details
+        </h3>
+        <div class="mt-2 text-sm text-amber-600">
+          <ul role="list" class="list-disc space-y-1 pl-5">
+            <li>Your password must be at least 8 characters</li>
+            <li>Your password must include at least one pro wrestling finishing move</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div class="grid gap-4" phx-hook="HostDraggableTicketContainer" id="tickets">
     <div
       :for={ticket_type <- @ticket_types}
