fix: update layout and conditionals for better rendering
improve the `html` structure in `root.html.heex` for full height
and adjust conditional rendering in `details.html.heex` to ensure
correct display of draft state and venue data.

--- a/lib/gits_web/live/host_live/events/show/details.html.heex
+++ b/lib/gits_web/live/host_live/events/show/details.html.heex
@@ -8,7 +8,10 @@
     phx-submit={@submit_action}
     phx-target={@myself}
   >
-    <div :if={not is_nil(@state)} class="col-span-full rounded-lg border border-amber-500/50 p-4">
+    <div
+      :if={@state == :draft and @issues_count > 0}
+      class="col-span-full rounded-lg border border-amber-500/50 p-4"
+    >
       <div class="flex">
         <div class="shrink-0">
           <.icon class="text-lg text-amber-400 ri--alert-fill" />
@@ -202,7 +205,7 @@
             <span class="truncate text-xs text-zinc-500 lg:text-sm">{venue.address}</span>
           </div>
           <.icon
-            :if={@form.data && @form.data.venue.id == venue.id}
+            :if={@form.data && @form.data.venue && @form.data.venue.id == venue.id}
             name="lucide--check"
             class="shrink-0"
           />
