--- a/lib/gits_web/live/host_live/events/show.html.heex
+++ b/lib/gits_web/live/host_live/events/show.html.heex
@@ -1,4 +1,4 @@
-<div class="grid h-full grid-rows-[auto_auto_1fr] items-start gap-2 overflow-auto lg:gap-6">
+<div class="grid lg:h-full grid-rows-[auto_auto_1fr] items-start gap-2 lg:overflow-auto lg:gap-6">
   <.host_header current_user={@current_user} handle={@handle} host_name={@host_name}>
     <.host_breadcrumb_button text="Events" href={~p"/hosts/#{@handle}/events"} />
     <span class="text-xs font-semibold text-zinc-400">/</span>
