--- a/lib/gits_web/components/layouts/app.html.heex
+++ b/lib/gits_web/components/layouts/app.html.heex
@@ -1,4 +1,4 @@
-<div class="overflow-auto h-full">
+<div class="overflow-auto max-h-dvh">
   <.header user={@current_user} />
   <div class="grid grid-rows-[1fr_auto]">
     <div class="lg:pt-8">
