--- a/lib/gits_web/live/host_live/events/show/dashboard.html.heex
+++ b/lib/gits_web/live/host_live/events/show/dashboard.html.heex
@@ -60,38 +60,18 @@
         </svg>
         <div class="flex grow flex-col gap-3">
           <div class="space-y-1">
-            <p class="text-sm font-medium">Your request was completed!</p>
+            <p class="text-sm font-medium">This event is ready to be published!</p>
             <p class="text-sm text-zinc-500">
-              It demonstrates that the task or request has been processed.
+              Publishing the event will make it available to everyone. You will still be able to make changes to the event details and tickets after publishing.
             </p>
           </div>
           <div class="flex gap-2">
-            <button class="focus-visible:outline-ring/70 [&amp;_svg]:pointer-events-none [&amp;_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 inline-flex h-8 items-center justify-center whitespace-nowrap rounded-lg px-3 text-xs font-medium shadow-sm shadow-black/5 outline-offset-2 transition-colors focus-visible:outline focus-visible:outline-2 disabled:pointer-events-none disabled:opacity-50">
-              Learn more
-            </button>
+            <.button variant={:accent} phx-target={@myself}>
+              <.icon class="ri--rocket-fill rotate-45" />
+              <span>Publish</span>
+            </.button>
           </div>
         </div>
-        <button
-          class="focus-visible:outline-ring/70 [&amp;_svg]:pointer-events-none [&amp;_svg]:shrink-0 hover:text-accent-foreground group -my-1.5 -me-2 inline-flex size-8 shrink-0 items-center justify-center whitespace-nowrap rounded-lg p-0 text-sm font-medium outline-offset-2 transition-colors hover:bg-transparent focus-visible:outline focus-visible:outline-2 disabled:pointer-events-none disabled:opacity-50"
-          aria-label="Close notification"
-        >
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="16"
-            height="16"
-            viewBox="0 0 24 24"
-            fill="none"
-            stroke="currentColor"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            class="lucide lucide-x opacity-60 transition-opacity group-hover:opacity-100"
-            aria-hidden="true"
-          >
-            <path d="M18 6 6 18"></path>
-            <path d="m6 6 12 12"></path>
-          </svg>
-        </button>
       </div>
     </div>
   </div>
