--- a/lib/gits_web/live/host_live/events.html.heex
+++ b/lib/gits_web/live/host_live/events.html.heex
@@ -26,12 +26,13 @@
     live_action={@live_action}
   />
   <.show_event
+    :if={false}
     current_user={@current_user}
     host_id={@host.id}
     host_name={@host.name}
     host_state={@host.state}
     handle={@host.handle}
-    payment_method_ready={@host.payment_method_ready?}
+    payment_method_ready?={@host.payment_method_ready?}
     has_paid_tickets?={@event.has_paid_tickets?}
     ticket_types={@event.ticket_types}
     live_action={@live_action}
@@ -50,16 +51,53 @@
       event={@event}
     />
 
-    <div :if={@live_action == :tickets} class="grid gap-4">
-      <.tickets_header />
-      <.tickets_warn_payout_details />
-      <.tickets_list ticket_types={@ticket_types} />
-      <.tickets_modal_manage_ticket
-        form={@tickets_form}
-        order_index={Enum.count(@ticket_types)}
-        on_change="validate_tickets_form"
-        on_submit="submit_tickets_form"
-      />
-    </div>
+    <div :if={@live_action == :tickets} class="grid gap-4"></div>
   </.show_event>
+
+  <div
+    :if={@live_action != :details}
+    class="grid lg:h-full grid-rows-[auto_auto_1fr] items-start gap-2 lg:overflow-auto lg:gap-6"
+  >
+    <.host_header current_user={@current_user} handle={@handle} host_name={@host_name}>
+      <.host_breadcrumb_button text="Events" href={~p"/hosts/#{@handle}/events"} />
+      <span class="text-xs font-semibold text-zinc-400">/</span>
+      <%= if is_nil(@event) do %>
+        <.host_breadcrumb_label text="Create new" />
+      <% else %>
+        <.host_breadcrumb_label text={@event.name} />
+      <% end %>
+    </.host_header>
+
+    <.event_summary event={@event} />
+    <.event_content>
+      <.event_sidebar
+        event={@event}
+        handle={@handle}
+        event_has_issues?={true}
+        paid_tickets_issue?={true}
+        action={@live_action}
+      />
+      <.event_main>
+        <.live_component
+          :if={@live_action == :dashboard}
+          id={@event.id}
+          module={GitsWeb.HostLive.Events.Show.Dashboard}
+          current_user={@current_user}
+          event={@event}
+        />
+
+        <%= if @live_action == :tickets do %>
+          <.tickets_header />
+          <.tickets_warn_payout_details />
+          <.tickets_list ticket_types={@ticket_types} />
+          <.tickets_modal_manage_ticket
+            form={@tickets_form}
+            order_index={Enum.count(@ticket_types)}
+            on_change="validate_tickets_form"
+            on_submit="submit_tickets_form"
+          />
+        <% end %>
+      </.event_main>
+    </.event_content>
+  </div>
 <% end %>
