--- a/lib/gits_web/components/layouts/host.html.heex
+++ b/lib/gits_web/components/layouts/host.html.heex
@@ -1,7 +1,7 @@
 <.flash_group flash={@flash} />
 
-<div class="grid gap-4 lg:grid-cols-[theme(space.64)_1fr] h-dvh w-full overflow-hidden">
-  <aside class="absolute inset-0 z-20 hidden w-full lg:max-w-64 shrink-0 space-y-8 bg-white lg:static lg:z-0 lg:block">
+<div class="grid h-dvh w-full gap-4 overflow-hidden lg:grid-cols-[theme(space.64)_1fr]">
+  <aside class="hiddenx absolute inset-0 z-20 w-full shrink-0 space-y-8 bg-white lg:static lg:z-0 lg:block lg:max-w-64">
     <div class="flex items-center px-4 py-2">
       <div class="grow lg:py-1">
         <div class="">
@@ -13,7 +13,7 @@
         <.icon name="lucide--x" />
       </.button>
     </div>
-    <div class="grid gap-2">
+    <div :if={false} class="grid gap-2">
       <div
         :for={
           {label, icon, href, current, children} <-
@@ -69,6 +69,34 @@
           </.link>
         </div>
       </div>
+    </div>
+    <div class="grid p-2 text-sm font-medium text-zinc-400">
+      <%= for {label, icon, href, current, children} <- GitsWeb.HostComponents.host_navigation_items(@host, @socket.view, @live_action) do %>
+        <%= if children == [] do %>
+          <.link
+            patch={href}
+            aria-selected={"#{current}"}
+            class="flex items-center gap-2 rounded-lg p-2 hover:bg-zinc-50/50 aria-selected:text-zinc-800"
+          >
+            <.icon class={"#{icon} shrink-0"} /> <span>{label}</span>
+          </.link>
+        <% else %>
+          <div class="flex items-center gap-2 rounded-lg p-2 hover:bg-zinc-50/50">
+            <.icon class={icon} /> <span class="grow">{label}</span>
+            <.icon class="shrink-0 ri--arrow-right-s-line" />
+          </div>
+          <div class="ml-4 grid px-1.5 border-l">
+            <.link
+              :for={{label, href, current} <- children}
+              patch={href}
+              aria-selected={"#{current}"}
+              class="rounded-lg p-2 hover:bg-zinc-50/50 aria-selected:text-zinc-800"
+            >
+              <span>{label}</span>
+            </.link>
+          </div>
+        <% end %>
+      <% end %>
     </div>
   </aside>
   <div class="w-full overflow-auto">
