--- a/lib/gits_web/live/host_live/events.html.heex
+++ b/lib/gits_web/live/host_live/events.html.heex
@@ -10,20 +10,6 @@
     events={@events}
   />
 <% else %>
-  <.live_component
-    :if={Enum.any?([], &(&1 == @live_action))}
-    id="show-event"
-    event_id={if(is_nil(assigns[:event]), do: nil, else: @event.public_id)}
-    module={__MODULE__.Show}
-    current_user={@current_user}
-    host_id={@host.id}
-    host_name={@host.name}
-    host_state={@host.state}
-    handle={@host.handle}
-    payment_method_ready={@host.payment_method_ready?}
-    live_action={@live_action}
-  />
-
   <div class="grid lg:h-full grid-rows-[auto_auto_1fr] items-start gap-2 lg:overflow-auto lg:gap-6">
     <.host_header current_user={@current_user} handle={@host.handle} host_name={@host.name}>
       <.host_breadcrumb_button text="Events" href={~p"/hosts/#{@host.handle}/events"} />
@@ -48,21 +34,15 @@
       <.event_main>
         <%= if @live_action == :dashboard do %>
           <.dashboard_overview
-            event_issues_pending?={false}
             event_state={@event.state}
             can_publish?={@can_publish?}
             form={@details_form}
-            on_change="validate_details_form"
-            on_submit="submit_details_form"
-            host_state={@host.state}
-            uploads={@uploads}
-            host_id={@host.id}
           />
         <% end %>
 
         <%= if @live_action == :details do %>
           <.details_warn_invalid_event
-            :if={not is_nil(@event) and @event.state == :draft and false}
+            :if={not is_nil(@event) and @event.state == :draft}
             issues_count={@issues_count}
           >
             <li :if={@start_date_invalid?}>Start date invalid</li>
@@ -71,13 +51,11 @@
             <li :if={@venue_invalid?}>Venue invalid</li>
           </.details_warn_invalid_event>
           <.details_form
-            handle={@host.handle}
             form={@details_form}
             on_change="validate_details_form"
             on_submit="submit_details_form"
             host_state={@host.state}
             uploads={@uploads}
-            host_id={@host.id}
           />
         <% end %>
 
